// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Transfer (1) Step 1 1`] = `
<div
  className="transfer-dialog-content"
>
  <div
    className="transfer-box "
  >
    <div
      className="transfer-box-header"
    >
      <div
        className="step-no"
      >
        1
      </div>
      <div
        className="box-titles"
      >
        <div
          className="main-title"
        >
          Transfer to Account
        </div>
        <div
          className="sub-title"
        >
          Move funds to another Hive account
        </div>
      </div>
    </div>
    <form
      className="transfer-box-body"
    >
      <div
        className="transfer-form"
      >
        <div
          className="form-group row"
        >
          <label
            className="form-label col-form-label col-sm-2"
          >
            From
          </label>
          <div
            className="col-sm-10"
          >
            <div
              className="input-group"
            >
              <div
                className="input-group-prepend"
              >
                <span
                  className="input-group-text"
                >
                  @
                </span>
              </div>
              <input
                className="form-control"
                readOnly={true}
                value="foo"
              />
            </div>
          </div>
        </div>
        <div
          className="form-group row"
        >
          <label
            className="form-label col-form-label col-sm-2"
          >
            To
          </label>
          <div
            className="col-sm-10"
          >
            <div
              className="suggestion"
            >
              <div
                className="input-group"
              >
                <div
                  className="input-group-prepend"
                >
                  <span
                    className="input-group-text"
                  >
                    @
                  </span>
                </div>
                <input
                  autoFocus={true}
                  className="form-control"
                  onChange={[Function]}
                  placeholder="username"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        
        
        <div
          className="form-group row"
        >
          <label
            className="form-label col-form-label col-sm-2"
          >
            Amount
          </label>
          <div
            className="d-flex align-items-center col-sm-10"
          >
            <div
              className="input-group"
            >
              <div
                className="input-group-prepend"
              >
                <span
                  className="input-group-text"
                >
                  @
                </span>
              </div>
              <input
                autoFocus={false}
                className="form-control"
                onChange={[Function]}
                placeholder="amount"
                type="text"
                value="0.001"
              />
            </div>
            <div
              className="asset-switch"
            >
              <a
                className="asset selected"
                onClick={[Function]}
              >
                HIVE
              </a>
              <a
                className="asset "
                onClick={[Function]}
              >
                HBD
              </a>
            </div>
          </div>
        </div>
        
        <div
          className="row"
        >
          <div
            className="col-md-10 offset-md-2"
          >
            <div
              className="balance"
            >
              Balance
              : 
              <span
                className="balance-num"
                onClick={[Function]}
              >
                12.234
                 
                HIVE
              </span>
            </div>
          </div>
        </div>
        <div
          className="form-group row"
        >
          <label
            className="form-label col-form-label col-sm-2"
          >
            Memo
          </label>
          <div
            className="col-sm-10"
          >
            <input
              className="form-control"
              onChange={[Function]}
              placeholder="enter your notes here"
              value=""
            />
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-10 offset-md-2"
          >
            <small
              className="text-muted tr-form-text form-text"
            >
              This memo is public
            </small>
          </div>
        </div>
        <div
          className="form-group row"
        >
          <div
            className="col-sm-10 offset-sm-2"
          >
            <button
              className="btn btn-primary"
              disabled={true}
              onClick={[Function]}
              type="button"
            >
              Next
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`(1) Transfer (2) Step 2 1`] = `
<div
  className="transfer-dialog-content"
>
  <div
    className="transfer-box"
  >
    <div
      className="transfer-box-header"
    >
      <div
        className="step-no"
      >
        2
      </div>
      <div
        className="box-titles"
      >
        <div
          className="main-title"
        >
          Confirm your transaction
        </div>
        <div
          className="sub-title"
        >
          Please, check if everything is correct
        </div>
      </div>
    </div>
    <div
      className="transfer-box-body"
    >
      <div
        className="confirmation"
      >
        <div
          className="users"
        >
          <div
            className="from-user"
          >
            <span
              className="user-avatar medium"
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/foo/avatar/medium)",
                }
              }
            />
          </div>
          <div
            className="arrow"
          >
            <svg
              className="fa-arrow-right"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            className="to-user"
          >
            <span
              className="user-avatar medium"
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/bar/avatar/medium)",
                }
              }
            />
          </div>
        </div>
        <div
          className="amount"
        >
          0.001
           
          HIVE
        </div>
        
      </div>
      <div
        className="d-flex justify-content-center"
      >
        <button
          className="btn btn-outline-secondary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Back
        </button>
        <span
          className="hr-6px-btn-spacer"
        />
        <button
          className="btn btn-primary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Confirm
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`(1) Transfer (3) Step 3 1`] = `
<div
  className="transfer-dialog-content"
>
  <div
    className="transfer-box"
  >
    <div
      className="transfer-box-header"
    >
      <div
        className="step-no"
      >
        3
      </div>
      <div
        className="box-titles"
      >
        <div
          className="main-title"
        >
          Sign transaction
        </div>
        <div
          className="sub-title"
        >
          Sign your transaction
        </div>
      </div>
    </div>
    <div
      className="transfer-box-body"
    >
      <div
        className="sign-tr"
      >
        <div
          className="input-group"
        >
          <div
            className="input-group-prepend"
          >
            <span
              className="input-group-text"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,14A2,2 0 0,1 5,12A2,2 0 0,1 7,10A2,2 0 0,1 9,12A2,2 0 0,1 7,14M12.65,10C11.83,7.67 9.61,6 7,6A6,6 0 0,0 1,12A6,6 0 0,0 7,18C9.61,18 11.83,16.33 12.65,14H17V18H21V14H23V10H12.65Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <input
            autoFocus={true}
            className="form-control"
            onChange={[Function]}
            placeholder="Enter active private key"
            type="password"
            value=""
          />
          <div
            className="input-group-append"
          >
            <button
              className="btn btn-primary"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Sign
            </button>
          </div>
        </div>
        <div
          className="or-divider"
        >
          OR
        </div>
        <div
          className="hs-sign"
        >
          <button
            className="btn btn-outline-primary"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <img
              alt="hivesigner"
              className="hs-logo"
              src="hive-signer.svg"
            />
             
            Sign with hivesigner
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`(1) Transfer (4) Step 4 1`] = `
<div
  className="transfer-dialog-content"
>
  <div
    className="transfer-box"
  >
    <div
      className="transfer-box-header"
    >
      <div
        className="step-no"
      >
        4
      </div>
      <div
        className="box-titles"
      >
        <div
          className="main-title"
        >
          Success
        </div>
        <div
          className="sub-title"
        >
          Transaction successful
        </div>
      </div>
    </div>
    <div
      className="transfer-box-body"
    >
      <div
        className="success"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Transferred <span class=\\"amount\\">0.001 HIVE</span> From <span class=\\"from-user\\">foo</span> to <span class=\\"to-user\\">bar</span>",
          }
        }
      />
      <div
        className="d-flex justify-content-center"
      >
        <button
          className="btn btn-outline-secondary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Another transfer
        </button>
        <span
          className="hr-6px-btn-spacer"
        />
        <button
          className="btn btn-primary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Finish
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`(2) Transfer to savings (1) Step 1 1`] = `
<div
  className="transfer-dialog-content"
>
  <div
    className="transfer-box "
  >
    <div
      className="transfer-box-header"
    >
      <div
        className="step-no"
      >
        1
      </div>
      <div
        className="box-titles"
      >
        <div
          className="main-title"
        >
          Transfer to Savings
        </div>
        <div
          className="sub-title"
        >
          Protect funds by requiring a 3 day withdraw waiting period
        </div>
      </div>
    </div>
    <form
      className="transfer-box-body"
    >
      <div
        className="transfer-form"
      >
        <div
          className="form-group row"
        >
          <label
            className="form-label col-form-label col-sm-2"
          >
            From
          </label>
          <div
            className="col-sm-10"
          >
            <div
              className="input-group"
            >
              <div
                className="input-group-prepend"
              >
                <span
                  className="input-group-text"
                >
                  @
                </span>
              </div>
              <input
                className="form-control"
                readOnly={true}
                value="foo"
              />
            </div>
          </div>
        </div>
        <div
          className="form-group row"
        >
          <label
            className="form-label col-form-label col-sm-2"
          >
            To
          </label>
          <div
            className="col-sm-10"
          >
            <div
              className="suggestion"
            >
              <div
                className="input-group"
              >
                <div
                  className="input-group-prepend"
                >
                  <span
                    className="input-group-text"
                  >
                    @
                  </span>
                </div>
                <input
                  autoFocus={false}
                  className="form-control"
                  onChange={[Function]}
                  placeholder="username"
                  type="text"
                  value="foo"
                />
              </div>
            </div>
          </div>
        </div>
        
        
        <div
          className="form-group row"
        >
          <label
            className="form-label col-form-label col-sm-2"
          >
            Amount
          </label>
          <div
            className="d-flex align-items-center col-sm-10"
          >
            <div
              className="input-group"
            >
              <div
                className="input-group-prepend"
              >
                <span
                  className="input-group-text"
                >
                  @
                </span>
              </div>
              <input
                autoFocus={true}
                className="form-control"
                onChange={[Function]}
                placeholder="amount"
                type="text"
                value="0.001"
              />
            </div>
            <div
              className="asset-switch"
            >
              <a
                className="asset "
                onClick={[Function]}
              >
                HIVE
              </a>
              <a
                className="asset selected"
                onClick={[Function]}
              >
                HBD
              </a>
            </div>
          </div>
        </div>
        
        <div
          className="row"
        >
          <div
            className="col-md-10 offset-md-2"
          >
            <div
              className="balance"
            >
              Balance
              : 
              <span
                className="balance-num"
                onClick={[Function]}
              >
                4,321.212
                 
                HBD
              </span>
            </div>
          </div>
        </div>
        <div
          className="form-group row"
        >
          <label
            className="form-label col-form-label col-sm-2"
          >
            Memo
          </label>
          <div
            className="col-sm-10"
          >
            <input
              className="form-control"
              onChange={[Function]}
              placeholder="enter your notes here"
              value=""
            />
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-10 offset-md-2"
          >
            <small
              className="text-muted tr-form-text form-text"
            >
              This memo is public
            </small>
          </div>
        </div>
        <div
          className="form-group row"
        >
          <div
            className="col-sm-10 offset-sm-2"
          >
            <button
              className="btn btn-primary"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Next
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`(3) Convert (1) Step 1 1`] = `
<div
  className="transfer-dialog-content"
>
  <div
    className="transfer-box "
  >
    <div
      className="transfer-box-header"
    >
      <div
        className="step-no"
      >
        1
      </div>
      <div
        className="box-titles"
      >
        <div
          className="main-title"
        >
          Convert
        </div>
        <div
          className="sub-title"
        >
          Only recommended when HBD is below $1. You will get $1 of HIVE in 3.5 days.
        </div>
      </div>
    </div>
    <form
      className="transfer-box-body"
    >
      <div
        className="transfer-form"
      >
        <div
          className="form-group row"
        >
          <label
            className="form-label col-form-label col-sm-2"
          >
            From
          </label>
          <div
            className="col-sm-10"
          >
            <div
              className="input-group"
            >
              <div
                className="input-group-prepend"
              >
                <span
                  className="input-group-text"
                >
                  @
                </span>
              </div>
              <input
                className="form-control"
                readOnly={true}
                value="foo"
              />
            </div>
          </div>
        </div>
        <div
          className="form-group row"
        >
          <label
            className="form-label col-form-label col-sm-2"
          >
            Amount
          </label>
          <div
            className="d-flex align-items-center col-sm-10"
          >
            <div
              className="input-group"
            >
              <div
                className="input-group-prepend"
              >
                <span
                  className="input-group-text"
                >
                  @
                </span>
              </div>
              <input
                autoFocus={true}
                className="form-control"
                onChange={[Function]}
                placeholder="amount"
                type="text"
                value="0.001"
              />
            </div>
            <div
              className="asset-switch"
            >
              <a
                className="asset "
                onClick={[Function]}
              >
                HIVE
              </a>
              <a
                className="asset selected"
                onClick={[Function]}
              >
                HBD
              </a>
            </div>
          </div>
        </div>
        
        <div
          className="row"
        >
          <div
            className="col-md-10 offset-md-2"
          >
            <div
              className="balance"
            >
              Balance
              : 
              <span
                className="balance-num"
                onClick={[Function]}
              >
                4,321.212
                 
                HBD
              </span>
            </div>
          </div>
        </div>
        <div
          className="form-group row"
        >
          <div
            className="col-sm-10 offset-sm-2"
          >
            <button
              className="btn btn-primary"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Next
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`(4) Withdraw saving (1) Step 1 1`] = `
<div
  className="transfer-dialog-content"
>
  <div
    className="transfer-box "
  >
    <div
      className="transfer-box-header"
    >
      <div
        className="step-no"
      >
        1
      </div>
      <div
        className="box-titles"
      >
        <div
          className="main-title"
        >
          Savings Withdraw
        </div>
        <div
          className="sub-title"
        >
          Withdraw funds after the required 3 day waiting period
        </div>
      </div>
    </div>
    <form
      className="transfer-box-body"
    >
      <div
        className="transfer-form"
      >
        <div
          className="form-group row"
        >
          <label
            className="form-label col-form-label col-sm-2"
          >
            From
          </label>
          <div
            className="col-sm-10"
          >
            <div
              className="input-group"
            >
              <div
                className="input-group-prepend"
              >
                <span
                  className="input-group-text"
                >
                  @
                </span>
              </div>
              <input
                className="form-control"
                readOnly={true}
                value="foo"
              />
            </div>
          </div>
        </div>
        <div
          className="form-group row"
        >
          <label
            className="form-label col-form-label col-sm-2"
          >
            To
          </label>
          <div
            className="col-sm-10"
          >
            <div
              className="suggestion"
            >
              <div
                className="input-group"
              >
                <div
                  className="input-group-prepend"
                >
                  <span
                    className="input-group-text"
                  >
                    @
                  </span>
                </div>
                <input
                  autoFocus={false}
                  className="form-control"
                  onChange={[Function]}
                  placeholder="username"
                  type="text"
                  value="foo"
                />
              </div>
            </div>
          </div>
        </div>
        
        
        <div
          className="form-group row"
        >
          <label
            className="form-label col-form-label col-sm-2"
          >
            Amount
          </label>
          <div
            className="d-flex align-items-center col-sm-10"
          >
            <div
              className="input-group"
            >
              <div
                className="input-group-prepend"
              >
                <span
                  className="input-group-text"
                >
                  @
                </span>
              </div>
              <input
                autoFocus={true}
                className="form-control"
                onChange={[Function]}
                placeholder="amount"
                type="text"
                value="0.001"
              />
            </div>
            <div
              className="asset-switch"
            >
              <a
                className="asset selected"
                onClick={[Function]}
              >
                HIVE
              </a>
              <a
                className="asset "
                onClick={[Function]}
              >
                HBD
              </a>
            </div>
          </div>
        </div>
        
        <div
          className="row"
        >
          <div
            className="col-md-10 offset-md-2"
          >
            <div
              className="balance"
            >
              Balance
              : 
              <span
                className="balance-num"
                onClick={[Function]}
              >
                2,123.000
                 
                HIVE
              </span>
            </div>
          </div>
        </div>
        <div
          className="form-group row"
        >
          <label
            className="form-label col-form-label col-sm-2"
          >
            Memo
          </label>
          <div
            className="col-sm-10"
          >
            <input
              className="form-control"
              onChange={[Function]}
              placeholder="enter your notes here"
              value=""
            />
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-10 offset-md-2"
          >
            <small
              className="text-muted tr-form-text form-text"
            >
              This memo is public
            </small>
          </div>
        </div>
        <div
          className="form-group row"
        >
          <div
            className="col-sm-10 offset-sm-2"
          >
            <button
              className="btn btn-primary"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Next
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`(5) Power up (1) Step 1 1`] = `
<div
  className="transfer-dialog-content"
>
  <div
    className="transfer-box "
  >
    <div
      className="transfer-box-header"
    >
      <div
        className="step-no"
      >
        1
      </div>
      <div
        className="box-titles"
      >
        <div
          className="main-title"
        >
          Stake Hive as Power
        </div>
        <div
          className="sub-title"
        >
          Influence tokens which give you more control over post payouts and allow you to earn on curation rewards.
        </div>
      </div>
    </div>
    <form
      className="transfer-box-body"
    >
      <div
        className="transfer-form"
      >
        <div
          className="form-group row"
        >
          <label
            className="form-label col-form-label col-sm-2"
          >
            From
          </label>
          <div
            className="col-sm-10"
          >
            <div
              className="input-group"
            >
              <div
                className="input-group-prepend"
              >
                <span
                  className="input-group-text"
                >
                  @
                </span>
              </div>
              <input
                className="form-control"
                readOnly={true}
                value="foo"
              />
            </div>
          </div>
        </div>
        <div
          className="form-group row"
        >
          <label
            className="form-label col-form-label col-sm-2"
          >
            To
          </label>
          <div
            className="col-sm-10"
          >
            <div
              className="suggestion"
            >
              <div
                className="input-group"
              >
                <div
                  className="input-group-prepend"
                >
                  <span
                    className="input-group-text"
                  >
                    @
                  </span>
                </div>
                <input
                  autoFocus={false}
                  className="form-control"
                  onChange={[Function]}
                  placeholder="username"
                  type="text"
                  value="foo"
                />
              </div>
            </div>
          </div>
        </div>
        
        
        <div
          className="form-group row"
        >
          <label
            className="form-label col-form-label col-sm-2"
          >
            Amount
          </label>
          <div
            className="d-flex align-items-center col-sm-10"
          >
            <div
              className="input-group"
            >
              <div
                className="input-group-prepend"
              >
                <span
                  className="input-group-text"
                >
                  @
                </span>
              </div>
              <input
                autoFocus={true}
                className="form-control"
                onChange={[Function]}
                placeholder="amount"
                type="text"
                value="0.001"
              />
            </div>
          </div>
        </div>
        
        <div
          className="row"
        >
          <div
            className="col-md-10 offset-md-2"
          >
            <div
              className="balance"
            >
              Balance
              : 
              <span
                className="balance-num"
                onClick={[Function]}
              >
                12.234
                 
                HIVE
              </span>
            </div>
          </div>
        </div>
        <div
          className="form-group row"
        >
          <div
            className="col-sm-10 offset-sm-2"
          >
            <button
              className="btn btn-primary"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Next
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
